User upload data (#499)
* user-file-upload component added

* user-file-upload component place on the user-profile page

* userFileUpload added to the validationrun service

* userFileUpload added to the app.modules

* api url for uploading added, a draft view for serving for it added

* tsconfig updated

* user file component updated

* userFileUpload updated and some styling improved

* my-datasets page added

* my-dataset page added to the navigation menu

* user-file-upload component moved to my datasets page

* some styling applied

* my dataset page updated

* user-file-upload component updated

* class 'center' moved to the global css file

* directory update done

* prime icons updated

* upload file changed to select file button and new button for uploading added

* file-upload-form component added

* help page updated - added a section for used data standard

* work around added to add scroll-to-section option

* user data uploading form added

* user data uploading form updated

* draft of user data file added

* uploading file form updated, so now first the file has to be chosen and then metadata form shows up

* file-upload-form component not needed

* draft back-end function for uploading file added

* a blank line added

* some updates in the uploading file serializer done

* uploading data view created, uploading view and serializers moved to the new file, urls imports updated

* getting list of user data files added to the back end

* user-data-file.dto.ts added to map the file model from the back end

* user-dataset-list component added to present list of files uploaded by the user

* user-dataset service added and respective code moved there from the validationrun service file

* user-file-upload updated to use appropriate service

* my-datasets site update to include list of user datasets

* deleting user data added on both front and back end sides

* my datasets table upda

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -6232,6 +6232,22 @@ a.btn-action.p-button:hover, a.btn-action-large.p-button:hover{
   transform: scale(1.2);
 }
 
+.cancel_black_btn.p-button, .save_name_black_btn.p-button{
+  color: black;
+  font-size: 1.5rem;
+  background-color: transparent;
+  border-color: transparent;
+  margin-left: 0.1rem;
+  width: 1.5rem;
+}
+
+.cancel_black_btn.p-button:not(.disabled):hover, .save_name_black_btn.p-button:not(.disabled):hover{
+  color: black;
+  background-color: transparent;
+  border-color: transparent;
+  transform: scale(1.2);
+}
+
 .dropdown-item.p-button{
   width: 100%;
   background-color: $dropdown-buttons-background;;
