--- a/UI/src/app/modules/dataset/components/dataset/dataset.component.html
+++ b/UI/src/app/modules/dataset/components/dataset/dataset.component.html
@@ -24,7 +24,7 @@
 <div class="p-grid  p-align-center">
   <div class="p-col">
     <span class="p-float-label">
-      <p-dropdown id="variableSelector" optionLabel="pretty_name" [style]="{'width': '100%'}"
+      <p-dropdown id="variableSelector" optionLabel="short_name" [style]="{'width': '100%'}"
                   [options]="(selectableDatasetVariables$|async)"
                   [(ngModel)]="selectionModel.selectedVariable"></p-dropdown>
             <label for="variableSelector">Variable</label>
