--- a/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
+++ b/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
@@ -20,7 +20,7 @@
             <ng-template #showTable>
               <div class="p-pb-3">The mean, median and standard deviation are calculated on the validation results aggregated by metric
                 and dataset. The reference dataset used is {{ (refDataset$ | async)?.pretty_name }}
-                ({{ (refDatasetVersion$ | async)?.pretty_name }}, {{ (refDatasetVariable$ | async)?.pretty_name }}).
+                ({{ (refDatasetVersion$ | async)?.short_name }}, {{ (refDatasetVariable$ | async)?.pretty_name }}).
               </div>
               <span [innerHtml]="table | dompurify"></span>
               <div class="d-flex justify-content-between align-items-center">
