for displayed name of version and dataset also space should be allowed; appropriate changes applied

--- a/UI/src/app/modules/user-datasets/components/user-file-upload/user-file-upload.component.html
+++ b/UI/src/app/modules/user-datasets/components/user-file-upload/user-file-upload.component.html
@@ -71,7 +71,7 @@
                    formControlName="dataset_pretty_name">
             <label for="dataset-pretty-name">Dataset display name (optional)</label>
             <span
-              pTooltip="Optional. 30 characters or fewer. Letters, digits and @/./+/-/_ only. If not provided, the name from the field above will be used."
+              pTooltip="Optional. 30 characters or fewer. Letters, digits, space and @/./+/-/_ only. If not provided, the name from the field above will be used."
               class="pi pi-question-circle">
             </span>
           </span>
@@ -93,7 +93,7 @@
                  formControlName="version_pretty_name">
           <label for="version-pretty-name">Version display name (optional)</label>
           <span
-            pTooltip="Optional. 30 characters or fewer. Letters, digits and @/./+/-/_ only. If not provided, the name from the field above will be used."
+            pTooltip="Optional. 30 characters or fewer. Letters, digits, space and @/./+/-/_ only. If not provided, the name from the field above will be used."
             class="pi pi-question-circle">
           </span>
         </span>
