--- a/UI/src/app/pages/my-datasets/my-datasets.component.html
+++ b/UI/src/app/pages/my-datasets/my-datasets.component.html
@@ -30,7 +30,7 @@
             </li>
             <li>
               Dataset name and version can be changed by clicking on it. <br>
-              The new name can consist of max 30 characters. Letters, digits and @/./+/-/_ only."
+              The new name can consist of max 30 characters. Letters, digits, space and @/./+/-/_ only."
             </li>
             <li>
               Only datasets for which there were no validation run can be removed.
