appropriate files updated to replace reference_configuration with spatial_reference_configuration (frontend)

--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
@@ -74,8 +74,8 @@
         <li>Compared {{ configurations.length  }} datasets:
           <ul>
             <li *ngFor="let config of configurations; let ind = index">
-              <em *ngIf="config.id != validationRun.reference_configuration">Dataset {{ind + 1}}:</em>
-              <em *ngIf="config.id == validationRun.reference_configuration">Reference:</em>
+              <em *ngIf="config.id != validationRun.spatial_reference_configuration">Dataset {{ind + 1}}:</em>
+              <em *ngIf="config.id == validationRun.spatial_reference_configuration">Reference:</em>
 
               {{config.dataset}} ({{config.version}}, {{config.variable}})
               [Filters:
@@ -139,7 +139,7 @@
 
         <li *ngIf="validationRun.scaling_method != 'none'; else elseScaling">Scaling reference:
           <span *ngFor="let config of configurations">
-                <span *ngIf="config.id === validationRun.reference_configuration">
+                <span *ngIf="config.id === validationRun.spatial_reference_configuration">
                   {{config.dataset}} ({{ config.version }}, {{ config.variable }})
 
                   <span *ngIf="config.filters || config.parameterisedFilters; else elseFilters">[Filters:
