--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -20,8 +20,11 @@
           <p-accordion multiple="true">
 
             <p-accordionTab *ngFor="let item of validationModel.datasetConfigurations; let datasetIdx = index"
-                            [header]="(item.datasetModel.selectedDataset?.pretty_name)+' / '+(item.datasetModel.selectedVersion?.pretty_name)+' / '+(item.datasetModel.selectedVariable?.short_name)"
-                            [selected]="datasetIdx == validationModel.datasetConfigurations.length - 1">
+                            [header]="(item.datasetModel.selectedDataset?.pretty_name)+' / ' +
+                             ''+(item.datasetModel.selectedVersion?.pretty_name)+' / '+(item.datasetModel.selectedVariable?.short_name)
+                             + (getInformationOnTheReference((item.spatialReference|async), (item.temporalReference|async)))"
+                            [selected]="datasetIdx == validationModel.datasetConfigurations.length - 1"
+                            [class]="{'highlighted': (item.highlighted|async)}">
 
               <qa-dataset *ngIf="validationModel.datasetConfigurations[datasetIdx].datasetModel.selectedDataset"
                           [selectionModel]="validationModel.datasetConfigurations[datasetIdx].datasetModel"
@@ -105,9 +108,10 @@
               id="spatial-reference"
               *ngIf="spatialReferenceList$|async"
               [chosenDatasets$]= "spatialReferenceList$"
-              [selectionModel]="validationModel.datasetConfigurations"
+              [selectionModel]="spatialRef"
               referenceType="spatialReference"
-              (changeDataset)="onReferenceChange($event)"></qa-validation-reference>
+              (hoverOverDataset)="onHoverOverReferenceDataset($event)"
+              (changeDataset)="onReferenceChange($event, 'spatialReference')"></qa-validation-reference>
           </div>
 
           <!--             temporal reference-->
@@ -117,9 +121,10 @@
               id="temporal-reference"
               *ngIf="temporalReferenceList$|async"
               [chosenDatasets$]= "temporalReferenceList$"
-              [selectionModel]="validationModel.datasetConfigurations"
+              [selectionModel]="temporalRef"
               referenceType="temporalReference"
-              (changeDataset)="onReferenceChange($event)"></qa-validation-reference>
+              (hoverOverDataset)="onHoverOverReferenceDataset($event)"
+              (changeDataset)="onReferenceChange($event, 'temporalReference')"></qa-validation-reference>
           </div>
 
 
