--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -110,7 +110,6 @@
               *ngIf="spatialReferenceList$|async"
               [chosenDatasets$]="spatialReferenceList$"
               [selectionModel]="spatialRef"
-              referenceType="spatialReference"
               (hoverOverDataset)="onHoverOverReferenceDataset($event)"
               (changeDataset)="onReferenceChange($event, 'spatialReference')"></qa-validation-reference>
           </div>
@@ -123,7 +122,6 @@
               *ngIf="temporalReferenceList$|async"
               [chosenDatasets$]="temporalReferenceList$"
               [selectionModel]="temporalRef"
-              referenceType="temporalReference"
               (hoverOverDataset)="onHoverOverReferenceDataset($event)"
               (changeDataset)="onReferenceChange($event, 'temporalReference')"></qa-validation-reference>
           </div>
@@ -135,7 +133,10 @@
         <!--      Scaling-->
 <!--        <p-panel header="Reference" [toggleable]="true" class="validation-small-row">-->
 <!--          <div class="p-col-10">-->
-            <qa-scaling [validationModel]="validationModel"></qa-scaling>
+            <qa-scaling
+              [validationModel]="validationModel"
+              (hoverOverDataset)="onHoverOverReferenceDataset($event)"
+            ></qa-scaling>
 <!--          </div>-->
 <!--        </p-panel>-->
 
