small code refinement done on the scaling component

--- a/UI/src/app/modules/scaling/components/scaling/scaling.component.html
+++ b/UI/src/app/modules/scaling/components/scaling/scaling.component.html
@@ -39,14 +39,14 @@
               <div (mouseover)="onHoverOverDataset(item, true)" (mouseleave)="onHoverOverDataset(item, false)"
                    (mouseup)="onHoverOverDataset(item, false)">
           <span>
-            {{item.datasetModel.selectedDataset.pretty_name}} ({{item.datasetModel.selectedVersion.pretty_name}})
+            {{item.datasetModel.selectedDataset.pretty_name}} ({{item.datasetModel.selectedVersion?.pretty_name}})
           </span>
               </div>
             </ng-template>
             <ng-template let-item pTemplate="selectedItem">
               <div>
                 <span>{{item.datasetModel.selectedDataset.pretty_name}}
-                  ({{item.datasetModel.selectedVersion.pretty_name}}{{item.index}})</span>
+                  ({{item.datasetModel.selectedVersion?.pretty_name}}{{item.index}})</span>
               </div>
 
             </ng-template>
