--- a/UI/src/app/modules/scaling/components/scaling/scaling.component.html
+++ b/UI/src/app/modules/scaling/components/scaling/scaling.component.html
@@ -16,7 +16,7 @@
           <p-dropdown id="scalingMethodSelector"
                       (onChange)="updateScalingMethod()"
                       [options]="scalingMethods"
-                      [ngModel]="selectedScalingMethod$|async"
+                      [ngModel]="verifyScaleToModel()|async"
                       (ngModelChange)="selectedScalingMethod$.next($event)"
                       optionLabel="description" [style]="{'width': '100%'}"></p-dropdown>
           <label for="scalingMethodSelector">Select scaling method</label>
